--- a/1.html
+++ b/1.html
@@ -55,12 +55,14 @@
        </div>
  
     </div>
-      
-    <p class="logo"><img src="asset/_HKMOA-logo_.png" alt=""></p>
+    <div class="content">
+        <p class="logo"><img src="asset/_HKMOA-logo_.png" alt=""></p>
 
-    <p class="text"><img src="asset/“向上滑动 打开信件”-文字.png" alt=""></p>
-    <p class="arrow"><img src="asset/箭头-“向上滑动”图示.png" alt=""></p>
-    <p class="letter"><img src="asset/大信封拷貝.png" alt=""></p>
+        <p class="text"><img src="asset/“向上滑动 打开信件”-文字.png" alt=""></p>
+        <p class="arrow"><img src="asset/箭头-“向上滑动”图示.png" alt=""></p>
+        <p class="letter"><img src="asset/大信封拷貝.png" alt=""></p>
+    </div>
+
 
 
 <script src="js/1.js"></script>
