--- a/index.html
+++ b/index.html
@@ -1,53 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-
-
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>scan</title>
-    <script src="https://unpkg.com/html5-qrcode"></script>
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/1.css">
-    
-
+    <title>Document</title>
 </head>
-
 <body>
-   <div class="first">
-    <p class="logo"><img src="asset/_HKMOA-logo_.png" alt=""></p>
-    <div class="buttonsss">   
-        <button style="background-color: #f0cc6b; margin-top: 10%;" onclick="useCamera()">使用相机扫一扫方式</button>
-        <button style="background-color: #fae2a2; margin-top: 10%;" onclick="useLocal()">
-            <input type="file" id="upload-input" accept="image/*" value="使用文件方式">
-            <span id="upload-text">使用文件方式</span>
-        </button>
-    </div>
- 
-    <div id="reader"></div>
-    <h3 id="qr-reader-results"></h3>
-
-    <div class="box">    
-        <div class="divSquare">1</div>
-        <div class="divSquare">2</div>
-        <div style='clear:both'></div>
-        <div class="divSquare">3</div>
-        <div class="divSquare">4</div>
-    </div>
-   </div>
-
-    <div class="content">
-        <p class="logo"><img src="asset/_HKMOA-logo_.png" alt=""></p>
-
-        <p class="text"><img src="asset/“向上滑动 打开信件”-文字.png" alt=""></p>
-        <p class="arrow"><img src="asset/箭头-“向上滑动”图示.png" alt=""></p>
-        <p class="letter"><img src="asset/大信封拷貝.png" alt=""></p>
-    </div>
-
-<script src='js/script.js'></script>
-<script src='js/1.js'></script>
+    <a href="1.html" ></a>
 </body>
-
-
 </html>
