--- a/1.html
+++ b/1.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <a onclick=" window.history.go(-1);"></a>
+    <a onclick=" window.history.go(-1);">html</a>
 </body>
 </html>
