--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
         <input type="file" id="upload-input" accept="image/*" value="使用文件方式">
         <span id="upload-text">使用文件方式</span>
     </button>
+    <button class="close">close</button>
     <div id="reader"></div>
     <h3 id="qr-reader-results"></h3>
     <script>
@@ -75,7 +76,10 @@
         let res = document.getElementById('qr-reader-results');
         let uploadInput = document.getElementById('upload-input');
         let config = { fps: 10, qrbox: { width: 300, height: 280 } }; //扫一扫相关设置
-
+        var close = document.querySelector(".close")
+        close.onclick = function(){
+            reader.style.display = "none"
+        }
         //使用本地文件
         function useLocal() {
             reader.style.display = "none";
