--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
         var close = document.querySelector(".close")
         close.onclick = function(){
             reader.style.display = "none"
+            html5QrCode.clear()
         }
         //使用本地文件
         function useLocal() {
